BEGIN;

CREATE TABLE settings (
 setting_id SERIAL PRIMARY KEY,
 key VARCHAR(100) UNIQUE NOT NULL,
 value VARCHAR(100) NOT NULL,
 description TEXT,
 updated_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP
 );
 
COMMIT;
